refactor: fix issues identified by static analysis